<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="memo"
            type="com.hyejineee.linechallenge.model.Memo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/write_memo_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:background="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"/>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteMemo"
            android:padding="4dp"
            android:background="@drawable/ic_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="0"
            />

        <EditText
            android:id="@+id/memo_title_edit_text"
            android:text="@{memo.title}"
            android:singleLine="true"
            android:hint="제목을 입력하세요"
            android:textSize="24dp"
            android:textAlignment="textStart"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <EditText
            android:id="@+id/memo_content_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:gravity="top|left"
            android:text="@{memo.content}"
            android:hint="내용을 입력하세요."
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/memo_title_edit_text"
            app:layout_constraintBottom_toTopOf="@id/add_image_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="0.05"/>

        <ImageButton
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addImage"
            android:background="@drawable/ic_add_image"
            android:padding="16dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/memo_title_edit_text"
            app:layout_constraintBottom_toTopOf="@id/image_list"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="첨부한 이미지"
            app:layout_constraintTop_toBottomOf="@id/memo_title_edit_text"
            app:layout_constraintBottom_toTopOf="@id/image_list"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="1"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="6dp"
            android:background="#0800BE00"
            app:layout_constraintTop_toBottomOf="@id/memo_content_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1">

        </androidx.recyclerview.widget.RecyclerView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>